# voice-type

./: .env.example  .gitignore  README.md  SPEC.md  build_exe.bat  main.py  pyproject.toml
.github/workflows/: build.yml
voice_type/: __init__.py  __main__.py  config.py  hotkey.py  main.py  paster.py  recorder.py  transcriber.py  ui.py
