[project]
name = "voice-type"
version = "2.0.0"
description = "Voice-to-text typing for Windows — press Alt+V to dictate anywhere"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "VoiceType Team"}]
keywords = ["voice", "typing", "transcription", "windows", "hotkey", "stt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office Productivity",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "pywin32>=306",
    "uiautomation>=2.0.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
ollama = [
    "requests>=2.31.0",
]

[project.scripts]
voice-type = "voice_type.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_type"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
